fix navbar z-index

--- a/components/NavBar/styles.module.css
+++ b/components/NavBar/styles.module.css
@@ -4,6 +4,7 @@
 
   position: fixed;
   top: 0;
+  z-index: 50;
 
   width: 100%;
 }
